--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="container">
       <h2 style="text-align:center">Vraag je Gratis SEO-scan aan</h2>
       <p style="text-align:center">Ontvang inzicht in je website, Google-score en groeikansen.</p>
-      <form>
+      <form action="https://formspree.io/f/mvzgvowj" method="POST">
         <input type="text" placeholder="Naam" required />
         <input type="email" placeholder="E-mailadres" required />
         <input type="url" placeholder="Website URL" required />
