--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="nl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- saved from url=(0092)file:///C:/Users/ramon/Downloads/marcodonato_digital_luxe_complete_elite_landingspagina.html -->
+<html lang="nl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marcodonato Digital Luxe | Gratis SEO-scan</title>
-  <meta name="description" content="Marcodonato Digital Luxe bouwt luxe, conversiegerichte websites. Ontvang nu een gratis SEO-scan en ontdek hoe jouw website beter kan scoren in Google." />
+  <meta name="description" content="Marcodonato Digital Luxe bouwt luxe, conversiegerichte websites. Ontvang nu een gratis SEO-scan en ontdek hoe jouw website beter kan scoren in Google.">
   <style>
     :root {
       --bg-dark: #0b0b0b;
@@ -131,7 +131,7 @@
     <div class="container">
       <h1>Luxe Websites die Klanten Opleveren</h1>
       <p>Marcodonato Digital Luxe bouwt professionele, conversiegerichte websites voor ondernemers die online willen domineren. Ontdek gratis hoe jouw website scoort in Google.</p>
-      <a href="#seo-scan" class="btn">Ontvang je Gratis SEO-scan</a>
+      <a href="file:///C:/Users/ramon/Downloads/marcodonato_digital_luxe_complete_elite_landingspagina.html#seo-scan" class="btn">Ontvang je Gratis SEO-scan</a>
     </div>
   </section>
 
@@ -141,7 +141,7 @@
       <h2>Wat Wij Doen</h2>
       <div class="features">
         <div class="feature">
-          <h3>Website Design & Development</h3>
+          <h3>Website Design &amp; Development</h3>
           <p>High-end websites op maat, gebouwd voor snelheid, vertrouwen en uitstraling.</p>
         </div>
         <div class="feature">
@@ -149,7 +149,7 @@
           <p>Strategische structuur die bezoekers omzet in leads en klanten.</p>
         </div>
         <div class="feature">
-          <h3>SEO & Performance</h3>
+          <h3>SEO &amp; Performance</h3>
           <p>Technisch perfect, snel en geoptimaliseerd voor Google.</p>
         </div>
         <div class="feature">
@@ -165,11 +165,21 @@
     <div class="container">
       <h2 style="text-align:center">Vraag je Gratis SEO-scan aan</h2>
       <p style="text-align:center">Ontvang inzicht in je website, Google-score en groeikansen.</p>
-      <form action="https://formspree.io/f/mvzgvowj" method="POST">
-        <input type="text" placeholder="Naam" required />
-        <input type="email" placeholder="E-mailadres" required />
-        <input type="url" placeholder="Website URL" required />
-        <button class="btn" type="submit" style="width:100%; border:none; cursor:pointer;">Start Gratis Analyse</button>
+      <form
+  action="https://formspree.io/f/mlgdodze"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
       </form>
     </div>
   </section>
@@ -202,7 +212,7 @@
     <div class="container">
       <h2>Contact</h2>
       <p>📧 infomarcodonato@protonmail.com</p>
-      <a href="#seo-scan" class="btn">Vraag je Gratis SEO-scan aan</a>
+      <a href="file:///C:/Users/ramon/Downloads/marcodonato_digital_luxe_complete_elite_landingspagina.html#seo-scan" class="btn">Vraag je Gratis SEO-scan aan</a>
     </div>
   </section>
 
@@ -210,5 +220,6 @@
     © 2026 Marcodonato Digital Luxe — Alle rechten voorbehouden
   </footer>
 
-</body>
-</html>
+
+
+</body></html>
