--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
   action="https://formspree.io/f/mlgdodze"
   method="POST"
 >
+<input type="hidden" name="_next" value="https://ramon01bvy.github.io/marcodonato-digital-luxe/bedankt.html">
   <label>
     Your email:
     <input type="email" name="email">
